# seo

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  main.py  pyproject.toml  requirements.txt  seo_result.pptx
resources/: website_examples
seo_scrap/: quotes.json  scrapy.cfg
seo_scrap/seo_scrap/: items.py  middlewares.py  pipelines.py  settings.py
seo_scrap/seo_scrap/spiders/: scrap.py
static/: index.html
tests/: test_seo.py
