[tool.poetry]
name = "SEO"
version = "0.1.0"
description = ""
authors = ["Théo Casner <theo.casner@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
